[package]
name = "ptwar-ui"
version.workspace = true
edition.workspace = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.15.2"
time = "0.3.37"
hexx = "0.20.0"
ptwar = { path = "../ptwar" }
rand = "0.9.0"
